parser/tests/bad/type02-2.st
% type of the expression cannot be assigned as the declared type
%   const identifier

const i: real := true
